--- a/backend/frontend/style.css
+++ b/backend/frontend/style.css
@@ -95,3 +95,47 @@
     font-weight: bold;
     border: none;
 }
+
+
+.navbar{
+    display: flex;
+    height: 80px;
+    /* border: 2px solid red; */
+    align-items: center;
+
+}
+
+.logo{
+    width: 75px;
+    height: 75px;
+    /* margin: 10px; */
+    margin-left: 75px;
+    margin-right: 750px;
+    margin-top: 5px;
+    
+}
+
+.navbar h1{
+    padding: 30px;
+    font-size: 24px;
+}
+
+#tweet{
+    cursor: pointer;
+    width: 100px;
+    margin:10px 10px;
+    padding: 10px;
+    font-size: 20px;
+    border-radius: 8px;
+    background-color: #1d9bf0;
+    color: white;
+    font-weight: bold;
+    border: none;
+}
+
+.x-body{
+    width: 1000px;
+    height: 90vh;
+    border: 2px solid red;
+    margin: 10px 200px;
+}
